--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.carousel {
+  position: relative;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.image {
+  width: 500px;
+  height: 600px;
+  border-radius: 10px;
+  background-color: green;
+  display: block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* .carousel {
+  opacity: 0;
+  transition-duration: 1s ease;
+
+} */
+
+.carousel.active {
+  opacity: 1;
+  /* transition-duration: 1s; */
+  /* transform: scale(1.08); */
+}
+ span {
+  display: block;
+   font-size: 5rem;
+   width: 350px;
+   height: 250px;
+   text-align: center;
+   justify-content: center;
+   /* display: flex; */
+   background-color: lightgray;
+   border-radius: 10px;
+   border-color: black;
+ }
+
+ .buttons {
+  position: absolute;
+  bottom: 5px;
+  clear: both;
+}
+
+ button {
+  padding: 1rem;
+  font-size: 2rem;
+  color: #fff;
+  z-index: 10;
+  cursor: pointer;
+  /* user-select: none; */
+  border-radius: 10px;
+  background-color: dodgerblue;
+}
+.button-next {
+  position: relative;
+  left: 30px;
+}
+
+.button-previous {
+  position: relative;
+  right: 50px;
+}
+
+button:hover {
+  background-color: rgb(21, 106, 192);
 }
